--- a/src/S-Innovations.Azure.TableStorageRepository.Spatial.DotSpatial/TableStorageRepository.Spatial.DotSpatial.csproj
+++ b/src/S-Innovations.Azure.TableStorageRepository.Spatial.DotSpatial/TableStorageRepository.Spatial.DotSpatial.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>SInnovations.Azure.TableStorageRepository.Spatial.DotSpatial</RootNamespace>
     <AssemblyName>S-Innovations.Azure.TableStorageRepository.Spatial.DotSpatial</AssemblyName>
     <Version>4.0.0-pre</Version>
@@ -16,9 +16,8 @@
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository\TableStorageRepository.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.0" />
-    <PackageReference Include="DotSpatial.Serialization" Version="1.9"  />
+    <PackageReference Include="DotSpatial.Serialization" Version="1.9" />
     <PackageReference Include="DotSpatial.Topology" Version="1.9" />
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1"  />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
