--- a/src/S-Innovations.Azure.TableStorageRepository.Spatial/TableStorageRepository.Spatial.csproj
+++ b/src/S-Innovations.Azure.TableStorageRepository.Spatial/TableStorageRepository.Spatial.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.4;net452</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>SInnovations.Azure.TableStorageRepository.Spatial</RootNamespace>
     <AssemblyName>S-Innovations.Azure.TableStorageRepository.Spatial</AssemblyName>
     <Version>4.0.0-pre</Version>
@@ -15,6 +15,6 @@
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository\TableStorageRepository.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.0" />
+   
   </ItemGroup>
 </Project>
